--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -23,6 +23,8 @@ body {
 
   textarea {
     color: var(--foreground-color);
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
 
     &:hover {
       box-shadow: 0 0 10px var(--highlight-background-color);
@@ -82,23 +84,25 @@ form.editable .results {
     }
   }
 
-  .result-details {
-    select {
-      color: var(--foreground-color);
+  select {
+    color: var(--foreground-color);
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
 
-      &:hover,
-      &:focus {
-        box-shadow: 0 0 10px var(--highlight-background-color);
-      }
+    &:hover,
+    &:focus {
+      box-shadow: 0 0 10px var(--highlight-background-color);
     }
+  }
 
-    input[type="text"] {
-      color: var(--foreground-color);
+  input[type="text"] {
+    color: var(--foreground-color);
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
 
-      &:hover,
-      &:focus {
-        box-shadow: 0 0 10px var(--highlight-background-color);
-      }
+    &:hover,
+    &:focus {
+      box-shadow: 0 0 10px var(--highlight-background-color);
     }
   }
 }
@@ -136,6 +140,7 @@ form.editable .results {
     input {
       color: var(--foreground-color);
       border: 2px groove var(--light-border-color);
+      background: rgba(255, 255, 255, 0.2);
 
       &:hover,
       &:focus {
@@ -223,7 +228,7 @@ form.editable .results {
   .roll-type-select {
     color: var(--foreground-color);
     border: 2px groove var(--light-border-color);
-    background: transparent;
+    background: rgba(255, 255, 255, 0.2);
   }
 
   select:focus {
@@ -319,8 +324,8 @@ form.editable .results {
 
 #chat-form textarea {
   color: var(--foreground-color);
-  background: transparent;
   border: 2px groove var(--light-border-color);
+  background: rgba(255, 255, 255, 0.2);
   font-family: var(--chat-font);
   font-size: 16px;
 
@@ -448,8 +453,8 @@ form.editable .results {
 
 form .form-group select {
   color: var(--foreground-color);
-  background: transparent;
   border: 2px groove var(--light-border-color);
+  background: rgba(255, 255, 255, 0.2);
 
   &:focus {
     box-shadow: 0 0 10px var(--highlight-background-color);
@@ -556,10 +561,10 @@ form .form-group-stacked {
   }
 
   .directory-header .header-search input {
-    background: transparent;
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
     border-radius: 0;
     font-family: var(--button-font);
-    border: 2px groove var(--light-border-color);
 
     &[type="text"]:focus {
       box-shadow: 0 0 5px var(--highlight-background-color);
@@ -683,10 +688,19 @@ form .form-group-stacked {
     color: var(--background-color);
     font-family: var(--h2-font);
     font-size: 32px;
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
   }
 
   select {
     font-family: var(--item-font);
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
+  }
+
+  .editor {
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
   }
 }
 
