--- a/scss/pirateborg/_sheet.scss
+++ b/scss/pirateborg/_sheet.scss
@@ -62,8 +62,8 @@
     }
 
     textarea {
-      border: 1px solid var(--light-border-color);
-      border-radius: 0;
+      border: 2px groove var(--light-border-color);
+      background: rgba(255, 255, 255, 0.2);
       color: var(--foreground-color);
       font-family: var(--item-font);
       font-size: 14px;
@@ -85,6 +85,7 @@
 
     .editor {
       border: 2px groove var(--light-border-color);
+      background: rgba(255, 255, 255, 0.2);
       color: var(--foreground-color);
       font-family: var(--item-font);
       font-size: 16px;
