More system rules

--- a/templates/item/class-sheet.html
+++ b/templates/item/class-sheet.html
@@ -160,6 +160,18 @@
         <label>{{localize "PB.ExtraResourceTestFormulaLabel"}}:</label>
         <input type="text" name="data.extraResourceTestFormulaLabel" value="{{data.data.extraResourceTestFormulaLabel}}" placeholder="" data-dtype="String" />
       </div>
+
+      <br />
+
+      <div class="form-group">
+        <label>{{localize "PB.BaseClassRequired"}}:</label>
+        <input type="text" name="data.requireBaseClass" value="{{data.data.requireBaseClass}}" placeholder="" data-dtype="String" />
+      </div>
+
+      <div class="form-group">
+        <label>{{localize "PB.SkipCharacterGenerator"}}:</label>
+        <input type="text" name="data.skipCharacterGenerator" value="{{data.data.skipCharacterGenerator}}" placeholder="" data-dtype="String" />
+      </div>
     </div>
   </section>
 </form>
