--- a/templates/dialog/allowed-scvm-classes-dialog.html
+++ b/templates/dialog/allowed-scvm-classes-dialog.html
@@ -1,6 +1,6 @@
 <form id="allowed-scvm-classes-form" class="custom-dialog allowed-scvm-classes-dialog">
   <div class="section">
-    <div class="subtitle">{{localize "PB.AllowedScvmClassesSelect"}}</div>
+    <div class="subtitle">{{localize "MB.AllowedScvmClassesSelect"}}</div>
     <ul>
       {{#each classes as |class|}}
       <li>
@@ -11,10 +11,10 @@
       </li>
       {{/each}}
     </ul>
-    <div><a class="toggle-none">{{localize "PB.ScvmfactoryToggleNone"}}</a>&nbsp; / &nbsp;<a class="toggle-all">{{localize "PB.ScvmfactoryToggleAll"}}</a></div>
+    <div><a class="toggle-none">{{localize "MB.ScvmfactoryToggleNone"}}</a>&nbsp; / &nbsp;<a class="toggle-all">{{localize "MB.ScvmfactoryToggleAll"}}</a></div>
   </div>
   <div class="button-row">
-    <button type="submit" class="button cancel-button" name="cancel" value="1">{{localize "PB.Cancel"}}</button>
-    <button type="submit" class="button ok-button" name="ok" value="1">{{localize "PB.Ok"}}</button>
+    <button type="submit" class="button cancel-button" name="cancel" value="1">{{localize "MB.Cancel"}}</button>
+    <button type="submit" class="button ok-button" name="ok" value="1">{{localize "MB.Ok"}}</button>
   </div>
 </form>
