--- a/templates/item/class-sheet.html
+++ b/templates/item/class-sheet.html
@@ -165,12 +165,12 @@
 
       <div class="form-group">
         <label>{{localize "PB.BaseClassRequired"}}:</label>
-        <input type="text" name="data.requireBaseClass" value="{{data.data.requireBaseClass}}" placeholder="" data-dtype="String" />
+        <input type="checkbox" name="data.requireBaseClass" {{checked data.data.requireBaseClass}} data-dtype="Boolean" />
       </div>
 
       <div class="form-group">
-        <label>{{localize "PB.SkipCharacterGenerator"}}:</label>
-        <input type="text" name="data.skipCharacterGenerator" value="{{data.data.skipCharacterGenerator}}" placeholder="" data-dtype="String" />
+        <label>{{localize "PB.CharacterGeneratorMacro"}}:</label>
+        <input type="text" name="data.characterGeneratorMacro" value="{{data.data.characterGeneratorMacro}}" placeholder="" data-dtype="String" />
       </div>
     </div>
   </section>
