--- a/templates/item/background-sheet.html
+++ b/templates/item/background-sheet.html
@@ -36,6 +36,11 @@
         <label>{{localize "PB.StartingBonusItems"}}:</label>
         <textarea name="data.startingBonusItems" placeholder="compendium;item" rows="4">{{data.data.startingBonusItems}}</textarea>
       </div>
+
+      <div class="form-group">
+        <label>{{localize "PB.StartingBonusRolls"}}:</label>
+        <textarea name="data.startingBonusRolls" placeholder="compendium;table;count" rows="4">{{data.data.startingBonusRolls}}</textarea>
+      </div>
     </div>
   </section>
 </form>
