--- a/templates/item/feature-sheet.html
+++ b/templates/item/feature-sheet.html
@@ -66,6 +66,11 @@
         <label>{{localize "PB.StartingBonusRolls"}}:</label>
         <textarea name="data.startingBonusRolls" placeholder="compendium;table;count" rows="4">{{data.data.startingBonusRolls}}</textarea>
       </div>
+
+      <div class="form-group">
+        <label>{{localize "PB.FlavorText"}}:</label>
+        <textarea name="data.flavorText" rows="8">{{data.data.flavorText}}</textarea>
+      </div>
     </div>
   </section>
 </form>
