--- a/scss/pirateborg.scss
+++ b/scss/pirateborg.scss
@@ -11,4 +11,5 @@
 @import "pirateborg/_foundry-overrides";
 @import "pirateborg/_rollcards";
 @import "pirateborg/_dialog";
+@import "pirateborg/_help-dialog";
 @import "pirateborg/_module-fixes";
