--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -31,11 +31,13 @@
 
   --h1-font: "Roman Antique Regular";
   --h2-font: "IM Fell English SC";
-  --h3-font: "IM Fell English SC";
+  --h3-font: "IM Fell English";
+  --chat-card-header-font: "IM Fell English";
 
   --chat-font: "Alegreya";
   --chat-info-font: "Alegreya";
   --item-font: "Alegreya";
+  --compendium-font: "IM Fell English";
 
   --button-font: "Alegreya";
 
