--- a/templates/actor/common/actor-equipment-list.html
+++ b/templates/actor/common/actor-equipment-list.html
@@ -23,7 +23,7 @@
         class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
         title="{{ifPrintElse item.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
       >
-        <i class="fas fa-shield-alt"></i
+        <i class="fas fa-fist-raised"></i
       ></a>
       {{/if}} {{#if item.data.droppable}}
       <a
