--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -40,4 +40,10 @@
     </div>
   </div>
   {{/if}}
+  {{#if ammoOutcome}}
+  <div class="outcome-text">
+    <span class="take-damage">{{{ammoOutcome}}}</span>
+  </div>
+  {{/if}}
+  
 </form>
