--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -584,8 +584,10 @@ form .form-group-stacked {
       &.folder > .folder-header {
         background: none;
         border-bottom: 2px groove var(--light-border-color);
-        h3 {
+        h3 {         
           color: var(--foreground-color);
+          font-family: var(--compendium-font);
+          font-size: 16px;
         }
       }
       &.folder {
@@ -619,8 +621,7 @@ form .form-group-stacked {
         }
 
         h4 {
-          font-family: var(--item-font);
-          font-weight: 600;
+          font-family: var(--compendium-font);
           font-size: 14px;
         }
         img {
@@ -630,6 +631,16 @@ form .form-group-stacked {
       }
     }
   }
+}
+
+#scenes .scene h3 {
+  color: var(--foreground-alt-color);
+}
+
+.compendium.directory .directory-list .directory-item {
+  color: var(--foreground-color);
+  font-family: var(--compendium-font);
+  font-size: 14px;
 }
 
 .tabs .item {
