--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -152,9 +152,10 @@
               <h4 class="item-name item-edit rollable">{{item.name}}</h4>
               {{#if ../data.data.trackAmmo}} {{#if item.data.usesAmmo}}
               <div class="ammo-select-col">
+                <span class="ammo-label">{{localize 'PB.ItemTypeAmmo'}}: </span>
                 <select class="ammo-select" name="selectedAmmo-{{item._id}}" data-dtype="Number" data-item-id="{{item._id}}">
                   {{#select item.data.ammoId}}
-                  <option value="">{{localize 'PB.ItemTypeAmmo'}}</option>
+                  <option value=""></option>
                   {{#each ../data.data.ammo as |ammo ammoId|}}
                   <option value="{{ammo._id}}">{{ammo.name}} ({{ammo.data.quantity}})</option>
                   {{/each}} {{/select}}
@@ -181,7 +182,7 @@
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
                 title="{{ifPrintElse item.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
-                ><i class="fas fa-shield-alt"></i
+                ><i class="fas fa-fist-raised"></i
               ></a>
               <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
               <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -240,7 +241,7 @@
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedArmor.data.equipped 'equipped'}}"
                 title="{{ifPrintElse data.data.equippedArmor.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
-                ><i class="fas fa-shield-alt"></i
+                ><i class="fas fa-fist-raisedfa-raised"></i
               ></a>
               <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
               <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -257,7 +258,7 @@
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedHat.data.equipped 'equipped'}}"
                 title="{{ifPrintElse data.data.equippedHat.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
-                ><i class="fas fa-shield-alt"></i
+                ><i class="fas fa-fist-raised"></i
               ></a>
               <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
               <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
