--- a/templates/dialog/help-dialog.html
+++ b/templates/dialog/help-dialog.html
@@ -27,7 +27,10 @@
       <div class="section">
         <h4>Premium Content</h4>
         {{#unless pbModuleInstalled}}
-        <p>The PIRATE BORG system provides you with everything you need to be able to play. Save yourself some data-entry time and get a copy of the PIRATE BORG premium module, it's bursting with ships!</p>
+        <p>
+          The PIRATE BORG system provides you with everything you need to be able to play. Save yourself some data-entry time and get a copy of the PIRATE BORG
+          premium module, it's bursting with ships!
+        </p>
         <div class="buttons-row">
           <a disabled>Coming Soon</a>
         </div>
