--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -39,11 +39,9 @@
       <span>{{xtotal targetArmorRoll}}</span>
     </div>
   </div>
-  {{/if}}
-  {{#if ammoOutcome}}
+  {{/if}} {{#if ammoOutcome}}
   <div class="outcome-text">
     <span class="take-damage">{{{ammoOutcome}}}</span>
   </div>
   {{/if}}
-  
 </form>
