--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -41,6 +41,8 @@
 
   --button-font: "Alegreya";
 
+  --color-text-hyperlink: var(--foreground-color);
+
   /* foundry core */
   --color-text-light-6: var(--foreground-color);
   --color-text-light-5: var(--foreground-color);
