--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -6,7 +6,7 @@
   margin-bottom: 10px;
 
   label {
-    font-family: var(--h2-font);
+    font-family: var(--item-font);
     font-size: 20px;
     margin-right: 10px;
     text-align: right;
@@ -106,4 +106,59 @@
 .scvm-dialog .class-name {
   text-transform: capitalize;
   padding-top: 2px;
+}
+
+.attack-dialog {
+  .form-group {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .item-armor-tier {
+    .tiers {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: flex-start;
+      gap: 12px;
+
+      li {
+        margin: 0;
+      }
+
+      input[type="radio"] {
+        display: none;
+      }
+
+      input[type="radio"]:checked + span.tier-num {
+        background: var(--button-background);
+        color: var(--button-color);
+        border-color: var(--button-background);
+      }
+
+      label {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        font-size: 16px;
+        gap: 4px;
+      }
+
+      .tier-num {
+        cursor: pointer;
+        border: 1px solid black;
+        border-radius: 100%;
+        font-family: var(--item-font);
+        width: 24px;
+        height: 24px;
+        text-align: center;
+        line-height: 21px;
+      }
+
+      .tier-dmg {
+        line-height: 13px;
+      }
+    }
+  }
 }
