--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -210,30 +210,32 @@
               <label class="stat-label tier-label">{{ localize "PB.Tier" }}</label>
               <ul class="tiers">
                 <li>
-                  <label
-                    ><input class="tier-radio" type="radio" name="tier.value" value="0" {{#ifEq data.data.equippedArmor.data.tier.value
-                    0}}checked{{/ifEq}}/><span class="tier-num">0</span><span class="tier-dmg">-0</span></label
-                  >
+                  <label>
+                    <input class="tier-radio" type="radio" name="tier.value" value="0" {{#ifEq data.data.equippedArmor.data.tier.value 0}}checked{{/ifEq}}/>
+                    <span class="tier-num">0</span>
+                    <span class="tier-dmg">-0</span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input class="tier-radio" type="radio" name="tier.value" value="1" {{#ifEq data.data.equippedArmor.data.tier.value 1}}checked{{/ifEq}}/>
+                    <span class="tier-num">1</span>
+                    <span class="tier-dmg">-d2</span>
+                  </label>
                 </li>
                 <li>
                   <label
-                    ><input class="tier-radio" type="radio" name="tier.value" value="1" {{#ifEq data.data.equippedArmor.data.tier.value
-                    1}}checked{{/ifEq}}/><span class="tier-num">1</span><span class="tier-dmg">-d2</span></label
-                  >
+                    ><input class="tier-radio" type="radio" name="tier.value" value="2" {{#ifEq data.data.equippedArmor.data.tier.value 2}}checked{{/ifEq}}/>
+                    <span class="tier-num">2</span>
+                    <span class="tier-dmg">-d4</span>
+                  </label>
                 </li>
                 <li>
                   <label
-                    ><input class="tier-radio" type="radio" name="tier.value" value="2" {{#ifEq data.data.equippedArmor.data.tier.value 2}}checked{{/ifEq}}
-                    {{#ifLt data.data.equippedArmor.data.tier.max 2}}disabled="true"{{/ifLt}}/><span class="tier-num">2</span
-                    ><span class="tier-dmg">-d4</span></label
-                  >
-                </li>
-                <li>
-                  <label
-                    ><input class="tier-radio" type="radio" name="tier.value" value="3" {{#ifEq data.data.equippedArmor.data.tier.value 3}}checked{{/ifEq}}
-                    {{#ifLt data.data.equippedArmor.data.tier.max 3}}disabled="true"{{/ifLt}}/><span class="tier-num">3</span
-                    ><span class="tier-dmg">-d6</span></label
-                  >
+                    ><input class="tier-radio" type="radio" name="tier.value" value="3" {{#ifEq data.data.equippedArmor.data.tier.value 3}}checked{{/ifEq}}/>
+                    <span class="tier-num">3</span>
+                    <span class="tier-dmg">-d6</span>
+                  </label>
                 </li>
               </ul>
             </div>
